nodejs/ocp/02/templates/dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    generation: 2
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455113742"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/workshops
    uid: 3e1a3d0c-a372-11ea-9655-0a580a8100f0
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: workshops
      deploymentconfig: workshops
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: workshops
          deploymentconfig: workshops
      spec:
        containers:
        - env:
          - name: REDIS
            value: redis:6379
          - name: REDIS_PASSWORD
            value: password
          image: image-registry.openshift-image-registry.svc:5000/exceptions/workshops@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
          imagePullPolicy: Always
          name: workshops
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - workshops
        from:
          kind: ImageStreamTag
          name: workshops:latest
          namespace: exceptions
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/exceptions/workshops@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T19:12:06Z"
      lastUpdateTime: "2020-05-31T19:12:06Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T19:12:07Z"
      lastUpdateTime: "2020-05-31T19:12:07Z"
      message: replication controller "workshops-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
