nodejs/ocp/02/templates/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-05-31T19:14:09Z"
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455115634"
    selfLink: /apis/route.openshift.io/v1/namespaces/exceptions/routes/workshops
    uid: e74be6f0-a372-11ea-a6ee-0a580a820124
  spec:
    host: workshops-exceptions.apps.shared.na.openshift.opentlc.com
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: workshops
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-31T19:14:09Z"
        status: "True"
        type: Admitted
      host: workshops-exceptions.apps.shared.na.openshift.opentlc.com
      routerCanonicalHostname: apps.shared.na.openshift.opentlc.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
